@@ -1,6 +1,7 @@
 Changes
 examples/bar
 examples/line
+examples/multiple
 examples/tooltip
 lib/HTML/D3.pm
 LICENSE
@@ -17,9 +18,11 @@ t/critic.t
 t/eof.t
 t/eol.t
 t/fixme.t
+t/gv.t
 t/line.t
 t/manifest.t
 t/metrics.t
+t/multiple.t
 t/no404s.t
 t/noplan.t
 t/pod-coverage.t
