@@ -80,11 +80,24 @@ Returns a string containing the HTML and JavaScript code for the chart.
 
     $html = $chart->render_line_chart_with_tooltips($data);
 
-Generates HTML and JavaScript code to render a bar chart with mouseover tooltips.
+Generates HTML and JavaScript code to render a line chart with mouseover tooltips.
 Accepts the following arguments:
 
 - `$data` - An array reference containing data points. Each data point should
 be an array reference with two elements: the label (string) and the value (numeric).
+
+Returns a string containing the HTML and JavaScript code for the chart.
+
+## render\_multi\_series\_line\_chart\_with\_tooltips
+
+    $html = $chart->render_multi_series_line_chart_with_tooltips($data);
+
+Generates HTML and JavaScript code to render a chart of many lines with mouseover tooltips.
+
+Accepts the following arguments:
+
+- `$data` - An reference to an array of hashes containing data points.
+Each data point should be an array reference with two elements: the label (string) and the value (numeric).
 
 Returns a string containing the HTML and JavaScript code for the chart.
 
